--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/*
 h1,
 h2,
 h3, 
@@ -6,9 +7,20 @@ h3,
     font-style: italic;
     font-family: 'Fraunces', serif;
 }
+*/
+
+body {
+    background-color: #121212;
+    color: white;
+    font: 100% system-ui;
+}
+
+h1 {
+    color: orange;
+}
 
 a {
-    color: red;
+    color: cyan;
 }
 
 .unique-class {
