--- a/style.css
+++ b/style.css
@@ -45,3 +45,10 @@ a {
 .story-narative {
     color: yellow;
 }
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
