--- a/gary/style.css
+++ b/gary/style.css
@@ -255,6 +255,34 @@ h2 {
     color: yellow;
 }
 
+.projButton {
+    border-radius: 5px;
+    width: 5%;
+}
+
+.projButton h2 {
+    font-size: 20px;
+}
+
+.projButton:hover {
+    background: brown;
+    opacity: 80%;
+    border-color: black;
+    cursor: pointer;
+}
+
+.selectedProj {
+    background: brown;
+    color: white;
+    border-color: black;
+}
+
+.projDetails {
+    margin-left: auto;
+    margin-right: auto;
+    width: 60%;
+}
+
 
 /* .inputText {
     background: transparent;
