--- a/style.css
+++ b/style.css
@@ -295,6 +295,35 @@ h2 {
 
 /* FUNKO POPS */
 
+.funkoBody {
+    /* background: white; */
+    color: black;
+    background: url("funko/background2.jpg") no-repeat fixed;
+    width: 100%;
+    height: 1000px;
+    /* width: auto; */
+    /* position: absolute; */
+    background-size: cover;
+    /* background-repeat: no-repeat; */
+}
+
+.popFigure img{
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+}
+
+.popFigure img:hover {
+    cursor: pointer;
+}
+
+
+
+
+
+
+
+
 .funkoTopHeader {
     background: black;
     height: 50px;
@@ -348,6 +377,11 @@ h2 {
 .funkoItem img {
     width: 200px;
 }
+
+
+
+
+
 
 
 
