--- a/style.css
+++ b/style.css
@@ -297,19 +297,23 @@ h2 {
 
 .funkoBody {
     /* background: white; */
-    color: black;
-    background: url("funko/background2.jpg") no-repeat fixed;
-    width: 100%;
-    height: 1000px;
+    /* width: 100%; */
+    /* height: 1000px; */
     /* width: auto; */
     /* position: absolute; */
-    background-size: cover;
     /* background-repeat: no-repeat; */
+    color: black;
+    background: url("funko/img/background.jpeg") no-repeat fixed;
+    background-size: cover;
+    width: auto;
+    height: auto;
+    margin: 0;
+    padding: 0;
 }
 
 .popFigure img{
-    width: 200px;
     height: 200px;
+    width: auto;
     object-fit: cover;
 }
 
@@ -342,6 +346,10 @@ h2 {
 /* Show the tooltip text when you mouse over the tooltip container */
 .tooltip:hover .tooltiptext {
     visibility: visible;
+}
+
+.shelf {
+    box-shadow: 10px 10px 5px black;
 }
 
 
@@ -387,6 +395,12 @@ h2 {
 .funkoLogoHeader {
     display: flex;
     justify-content: center;
+}
+
+.funkoLogoHeader img {
+    height: 150px;
+    width: auto;
+    margin: 20px;
 }
 
 .funkoContent {
