--- a/style.css
+++ b/style.css
@@ -312,7 +312,7 @@ h2 {
 }
 
 .popFigure img{
-    height: 200px;
+    height: 150px;
     width: auto;
     object-fit: cover;
 }
@@ -325,7 +325,7 @@ h2 {
 .tooltip {
     position: relative;
     display: inline-block;
-    border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
+    /* border-bottom: 1px dotted black; If you want dots under the hoverable text */
 }
   
 /* Tooltip text */
@@ -349,8 +349,22 @@ h2 {
 }
 
 .shelf {
-    box-shadow: 10px 10px 5px black;
+    box-shadow: 0px 10px 15px black;
 }
+
+.shelves .centerRow {
+    margin-top: 200px;
+}
+
+/* .funkoShelves {
+    margin: 30px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.shelfItem {
+    padding: 20px;
+} */
 
 
 
@@ -400,7 +414,7 @@ h2 {
 .funkoLogoHeader img {
     height: 150px;
     width: auto;
-    margin: 20px;
+    margin-top: 20px;
 }
 
 .funkoContent {
