--- a/style.css
+++ b/style.css
@@ -293,7 +293,7 @@ h2 {
 
 
 
-/* FUNKO POPS */
+/* --------- FUNKO POPS --------- */
 
 .funkoBody {
     /* background: white; */
@@ -315,56 +315,63 @@ h2 {
     height: 150px;
     width: auto;
     object-fit: cover;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .popFigure img:hover {
     cursor: pointer;
 }
 
-/* Tooltip container */
+.shelf {
+    box-shadow: 0px 10px 15px black;
+}
+
+.shelfRow {
+    margin-top: 50px;
+}
+
+.funkoLogoHeader {
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
+}
+
+.funkoLogoHeader img {
+    height: 150px;
+    width: auto;
+    margin-top: 20px;
+}
+
+/* tooltip */
 .tooltip {
     position: relative;
     display: inline-block;
-    /* border-bottom: 1px dotted black; If you want dots under the hoverable text */
 }
   
-/* Tooltip text */
+/* tooltip text */
 .tooltip .tooltiptext {
     visibility: hidden;
-    width: 120px;
+    width: 50px;
     background-color: black;
     color: #fff;
     text-align: center;
     padding: 5px 0;
     border-radius: 6px;
    
-    /* Position the tooltip text - see examples below! */
+    /* text position */
     position: absolute;
+    bottom: 102%;
+    right: 50%;
+    /* left: 50%; */
     z-index: 1;
 }
   
-/* Show the tooltip text when you mouse over the tooltip container */
+/* tooltip hover effect */
 .tooltip:hover .tooltiptext {
     visibility: visible;
 }
 
-.shelf {
-    box-shadow: 0px 10px 15px black;
-}
-
-.shelves .centerRow {
-    margin-top: 200px;
-}
-
-/* .funkoShelves {
-    margin: 30px;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-}
-
-.shelfItem {
-    padding: 20px;
-} */
 
 
 
@@ -372,6 +379,12 @@ h2 {
 
 
 
+
+
+
+
+
+/* OLD FUNKO PAGE */
 
 .funkoTopHeader {
     background: black;
@@ -404,17 +417,6 @@ h2 {
     font-size: 20px;
     text-decoration: none;
     font-weight: bold;
-}
-
-.funkoLogoHeader {
-    display: flex;
-    justify-content: center;
-}
-
-.funkoLogoHeader img {
-    height: 150px;
-    width: auto;
-    margin-top: 20px;
 }
 
 .funkoContent {
