--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
+/* @import url('https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap'); */
+/* @import url('https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap'); */
+/* @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap');
+
 body {
     background: black;
     color: lime;
-    font-family: monospace;
+    /* font-family: monospace; */
+    font-family: 'Open Sans', sans-serif;
     margin: 0;
     padding: 0;
     width: 100vh;
@@ -129,7 +135,8 @@ h2 {
     background: transparent;
     outline: none;
     border: none;
-    font-family: monospace;
+    /* font-family: monospace; */
+    font-family: 'Open Sans', sans-serif;
     font-size: 30px;
     font-weight: bold;
     padding-left: 10px;
@@ -289,6 +296,111 @@ h2 {
     margin-right: auto;
     width: 60%;
 }
+
+.contactInfo {
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
+.contactButton {
+    border-radius: 10px;
+    /* width: 350px; */
+}
+
+.contactButton h2 {
+    font-size: 20px;
+    padding: 8px;
+}
+
+.contactButtonEmail:hover {
+    background: maroon;
+    opacity: 80%;
+    border-color: black;
+    cursor: pointer;
+}
+
+.contactButtonLinkedIn:hover {
+    background: #0077B5;
+    opacity: 80%;
+    border-color: black;
+    cursor: pointer;
+}
+
+.experiences {
+    /* background-color: #1e1e1e; */
+    margin-left: 60px;
+    margin-right: 60px;
+    margin-top: 50px;
+}
+
+.experiences hr {
+    background-color: #1e1e1e;
+    /* background-color: white; */
+    height: 3px;
+    border: none;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    /* margin-left: 100px;
+    margin-right: 100px; */
+}
+
+.experience-future {
+    margin-top: 75px;
+}
+
+.experience {
+    grid-template-columns: repeat(12, 1fr);
+    display: grid;
+}
+
+.experienceCol1 {
+    grid-column: 2/5;
+    justify-content: center;
+}
+
+.experienceCol2 {
+    grid-column: 6/13;
+}
+
+.companyLogo {
+    margin-top: 10px;
+}
+.companyLogo img {
+    /* width: 200px; */
+    max-width: 400px;
+    max-height: 50px;
+}
+
+.position {
+    font-weight: bold;
+}
+
+.company {
+    font-weight: bold;
+}
+
+.projects {
+    margin-left: auto;
+    margin-right: auto;
+    width: 60%;
+    margin-top: 50px;
+}
+
+.projects hr {
+    background-color: #1e1e1e;
+    height: 3px;
+    border: none;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+
+
+/* MATTER */
+
+
+
 
 
 
