--- a/style.css
+++ b/style.css
@@ -314,7 +314,7 @@ h2 {
 }
 
 .contactButtonEmail:hover {
-    background: maroon;
+    background: crimson;
     opacity: 80%;
     border-color: black;
     cursor: pointer;
@@ -335,7 +335,7 @@ h2 {
 }
 
 .experiences hr {
-    background-color: #1e1e1e;
+    background-color: #152238;
     /* background-color: white; */
     height: 3px;
     border: none;
@@ -368,7 +368,7 @@ h2 {
 }
 .companyLogo img {
     /* width: 200px; */
-    max-width: 400px;
+    max-width: 300px;
     max-height: 50px;
 }
 
@@ -388,14 +388,21 @@ h2 {
 }
 
 .projects hr {
-    background-color: #1e1e1e;
+    background-color: #152238;
     height: 3px;
     border: none;
     margin-top: 30px;
     margin-bottom: 30px;
 }
 
-
+.meBox {
+    border: 2px solid #152238;
+    border-radius: 10px;
+    /* background-color: black; */
+    margin-left: auto;
+    margin-right: auto;
+    width: 40%;
+}
 
 /* MATTER */
 
